--- a/os/Makefile
+++ b/os/Makefile
@@ -1,13 +1,24 @@
 BUILD_DIR=../build/os
 
-OS_SRC := $(wildcard *.asm)
-OS_OBJ := $(patsubst %.asm, $(BUILD_DIR)/%.bin, $(OS_SRC))
+CFLAGS+=-ffreestanding -nostdlib -gdwarf-4 -m32 -ggdb3
 
-all: $(OS_OBJ)
+OS_ASRC := $(wildcard *.asm)
+OS_CSRC := $(wildcard *.c)
+OS_AOBJ := $(patsubst %.asm, $(BUILD_DIR)/%.o, $(OS_ASRC))
+OS_COBJ := $(patsubst %.c, $(BUILD_DIR)/%.o, $(OS_CSRC))
+OS_KERNEL := $(BUILD_DIR)/kernel.elf
+
+all: $(OS_KERNEL)
 
 $(BUILD_DIR)/%.bin: %.asm
 	nasm -f bin $< -o $@
 
+$(BUILD_DIR)/%.o: %.c
+	gcc $(CFLAGS) -c $< -o $@
+
+$(OS_KERNEL): $(OS_COBJ) os.lds
+	ld -nmagic -m elf_i386 -Tos.lds $(OS_COBJ) -o $@
+
 clean:
-	rm $(BUILD_DIR)/*
+	rm $(OS_COBJ)
 
